--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -14,3 +14,17 @@ ul {
     list-style-type: none;
     margin: 0;
 }
+
+// Section Header
+.section-header {
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+// Sectoin Pragraph
+.section-paragraph {
+    font-size: 0.8em;
+    color: #787878;
+    text-align: center;
+    margin-bottom: 1.5em;
+}
