--- a/scss/_shared.scss
+++ b/scss/_shared.scss
@@ -21,10 +21,11 @@ ul {
     margin-bottom: 1em;
 }
 
-// Sectoin Pragraph
+// Section Pragraph
 .section-paragraph {
     font-size: 0.8em;
     color: #787878;
     text-align: center;
     margin-bottom: 1.5em;
 }
+
