--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,8 +324,6 @@ body {
         padding-bottom: 5em;
         
         .popular-container {
-            max-width: 100%;
-            display: flex;
 
             .popular-card {
 
@@ -371,6 +369,161 @@ body {
                             background-color: $main-color;
                             color: $white-color;
                             border-color: $main-color;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    // Products
+    #products {
+        padding-bottom: 5em; 
+
+        .products-container {
+
+            .product {
+                position: relative;
+
+                .product-img {
+                    position: relative;
+                    width: 300px;
+                    height: 100%;
+
+                    .main-img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                    
+                    .hover-img {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 300px;
+                        opacity: 0;
+                        transition: all .3s linear;
+                    }
+                }
+
+                .product-content {
+                    margin-top: 1em;
+
+                    .product-header {
+                        color: $dark-color;
+                        font-size: 0.8em;
+                    }
+
+                    .price-stars {
+                        padding-top: 1em;
+
+                        .product-stars {
+                            opacity: 0;
+                            transition: all .3s linear;
+
+                            i {
+                                color: $star-color;
+                            }
+                        }
+                    }
+                }
+
+                .layer {
+                    position: absolute;
+                    left: 3.5em;
+                    bottom: 7em;
+                    opacity: 0;
+                    transition: all .3s linear;
+
+                    .layer-btn {
+                        color: #fff;
+                        @include passLink($white-color, $main-color, $main-color);
+                    }
+                }
+
+                &:hover .hover-img,
+                &:hover .layer  {
+                    opacity: 1;
+                }
+
+                &:hover {
+
+                    .product-content {
+
+                        .price-stars {
+
+                            .product-stars {
+                                opacity: 1;
+                            }
+                        }
+                    }
+                } 
+            }
+        }
+    }
+
+    // Quality
+    #quality {
+        background-color: #FAFAFA;
+        max-width: 100%;
+        display: flex;
+        padding-bottom: 5em;
+
+        .quality-heading {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            padding: 8em 15px 8em 45px;
+            align-content: center;
+            width: 50%;
+            
+            .section-header {
+                text-align: left;
+                font-size: 3em;
+                color: $main-color;
+                font-weight: bold;
+            }
+
+            .section-paragraph {
+                text-align: left;
+                margin-bottom: 3.5em;
+            }
+
+            .pass-link {
+                @include passLink($white-color, $main-color, $main-color);
+
+                &:hover {
+                    background-color: #117b77;
+                }
+            }
+        }
+
+        .thumbnail {
+            position: relative;
+            background-image: url("../img/video-thumbnail.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 50%;
+            height: 62vh;
+
+            .video {
+                position: absolute;
+                top: 45%;
+                left: 49%;
+
+                i {
+                    color: #fff;
+                }
+            }
+
+            .modal {
+                
+                .modal-dialog {
+
+                    .modal-content {
+                        
+                        .modal-body {
+
                         }
                     }
                 }
