--- a/scss/style.scss
+++ b/scss/style.scss
@@ -333,7 +333,7 @@ body {
                     &::after {
                         content: "";
                         position: absolute;
-                        bottom: 0;
+                        top: 0;
                         left: 0;
                         width: 100%;
                         height: 100%;
@@ -363,7 +363,7 @@ body {
                     }
 
                     .pass-link {
-                        @include passLink($dark-color, $white-color, #8e8e8e);;;
+                        @include passLink($dark-color, $white-color, #8e8e8e);
 
                         &:hover {
                             background-color: $main-color;
@@ -466,7 +466,7 @@ body {
         background-color: #FAFAFA;
         max-width: 100%;
         display: flex;
-        padding-bottom: 5em;
+        margin-bottom: 5em;
 
         .quality-heading {
             display: flex;
@@ -515,15 +515,123 @@ body {
                     color: #fff;
                 }
             }
+        }
+    }
 
-            .modal {
-                
-                .modal-dialog {
+    // Gallery 
+    #gallery {
+        padding-bottom: 5em;
 
-                    .modal-content {
-                        
-                        .modal-body {
+        .gallery-container {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 0;
 
+            .gallery-img {
+
+                .img {
+                    position: relative;
+                    width: 353px;
+                    height: 100%;
+    
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(0, 0, 0, .4);
+                        opacity: 0;
+                        transition: all .3s linear;
+                    }
+                    
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .img-layer {
+                        position: absolute;
+                        right: 5%;
+                        bottom: 5%;
+                        color: $white-color;
+                        z-index: 1;
+                        opacity: 0;
+                        transition: all .3s linear;
+                    }
+                }
+
+                &:hover .img::after,
+                &:hover .img-layer {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .all-images {
+            text-align: center;
+            margin-top: 2em;
+            .pass-link {
+                @include passLink($dark-color, transparent, $dark-color);
+    
+                &:hover {
+                    @include passLink($white-color, $main-color, $main-color);
+                }
+            }
+        }
+    }
+
+    // Posts
+    #posts {
+        padding-bottom: 5em;
+        .posts-container {
+
+            .post-card {
+
+                .post-img {
+                    position: relative;
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(0, 0, 0, .4);
+                        opacity: 0;
+                        transition: all .3s linear;
+                    }
+                }
+
+                &:hover .post-img::after {
+                    opacity: 1;
+                }
+
+                .post-content {
+                    padding: 2.5em 1em 0 3.75em;
+
+                    small {
+                        display: inline-block;
+                        color: $grey-color;
+                        margin-bottom: 1em;
+                    }
+    
+                    .title {
+                        margin-bottom: 1em;
+                    }
+    
+                    .content {
+                        color: $grey-color;
+                        margin-bottom: 1.8em;
+                    }
+
+                    .pass-link {
+                        @include passLink($dark-color, transparent, $dark-color);
+
+                        &:hover {
+                            @include passLink($white-color, $main-color, $main-color);
                         }
                     }
                 }
